--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+        integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
     <title>T0-DO List</title>
 </head>
+
 <body>
-    <header>
-        <h1>My To Do List</h1>
-    </header>
-    <form>
-        <input type="text" class="todo-input">
-        <button class="todo-button" type="submit">
-            <i class="fas fa-plus-square"></i>
-        </button>
-        <div class="select">
-            <select name="todos" class="filter-todo">
-                <option value="all" selected class="custom">All</option>
-                <option value="completed" class="custom">Completed</option>
-                <option value="incomplete" class="custom">Incomplete</option>               
-            </select>
+    <div class="custom-container">
+        <div class="head">
+            <header>
+                <h1>My To Do List</h1>
+            </header>
         </div>
-    </form>
-    <div class="todo-container">
-        <ul class="todo-list"></ul>
+        <div class="form-container">
+            <form>
+                <input type="text" class="todo-input">
+                <button class="todo-button" type="submit">
+                    <i class="fas fa-plus-square"></i>
+                </button>
+                <div class="select">
+                    <select name="todos" class="filter-todo">
+                        <option value="all" selected class="custom">All</option>
+                        <option value="completed" class="custom">Completed</option>
+                        <option value="incomplete" class="custom">Incomplete</option>
+                    </select>
+                </div>
+            </form>
+
+        </div>
+        <div class="todo-container">
+            <ul class="todo-list"></ul>
+        </div>
     </div>
-  
-    
     <script src="app.js"></script>
 </body>
+
 </html>
