--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 <h1>My To Do List</h1>
             </header>
         </div>
+        //Enter you work here
         <div class="form-container">
             <form>
-                <input type="text" class="todo-input">
+                <input type="text" class="todo-input" placeholder="Enter text here">
                 <button class="todo-button" type="submit">
                     <i class="fas fa-plus-square"></i>
                 </button>
